--- a/views/layouts/base.html
+++ b/views/layouts/base.html
@@ -6,6 +6,7 @@
     <title>{{or .Title "Chat app with fiber"}}</title>
     <script src="/vendor/htmx@2.0.2.min.js"></script>
     <script src="/vendor/htmx-ws@2.0.1.js"></script>
+    <script src="/js/main.js" defer="true"></script>
     <link rel="stylesheet" href="/css/output.css" />
 
     <!-- favicon -->
