--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -1,20 +1,9 @@
 <div class="flex h-[calc(100vh-8rem)]">
   <!-- Rooms list -->
-  <div class="w-1/4 bg-white rounded shadow p-4">
+  <div class="w-1/4 bg-white rounded shadow p-4 flex flex-col h-full">
     <h2 class="text-xl font-bold mb-4">Rooms</h2>
-    <ul id="room-list">
-      {{range .Rooms}}
-      <li class="mb-2">
-        <button
-          hx-get="/rooms/{{.ID}}"
-          hx-target="#room-messages"
-          hx-push-url="true"
-          class="text-blue-600 hover:underline"
-        >
-          {{.Name}}
-        </button>
-      </li>
-      {{end}}
+    <ul id="room-list" class="overflow-y-auto flex-grow">
+      {{range .Rooms}} {{template "partials/room" .}} {{end}}
     </ul>
   </div>
 
@@ -23,32 +12,15 @@
     id="room-messages"
     class="w-3/4 ml-4 flex flex-col bg-white rounded shadow p-4"
   >
+    {{if .Messages}} {{template "partials/messages" .}}
+    <script>
+      document.getElementById("room-{{.RoomID}}-messages").scrollTop =
+        document.getElementById("room-{{.RoomID}}-messages").scrollHeight;
+    </script>
+    {{else}}
     <h3 id="messages" class="text-2xl">
       Welcome, Select a chat room on the left to view its messages.
     </h3>
+    {{end}}
   </div>
 </div>
-
-<script>
-  document.addEventListener("htmx:afterSettle", function (event) {
-    const messages = document.getElementById("messages");
-    if (messages) {
-      messages.scrollTo(0, messages.scrollHeight);
-    }
-  });
-
-  document.addEventListener("htmx:wsAfterMessage", function (event) {
-    const messages = document.getElementById("messages");
-    if (messages) {
-      // Check if user is near the bottom
-      const isAtBottom =
-        messages.scrollHeight - messages.scrollTop <=
-        messages.clientHeight + 50;
-
-      if (isAtBottom) {
-        messages.scrollTo(0, messages.scrollHeight);
-      }
-      // TODO, show notification if user is not at the bottom
-    }
-  });
-</script>
