--- a/views/layouts/base.html
+++ b/views/layouts/base.html
@@ -99,7 +99,7 @@
     <main
       class="container mx-auto mt-4 p-4 flex-grow"
       hx-ext="ws"
-      ws-connect="/api/v1/ws"
+      ws-connect="/ws"
     >
       {{embed}}
     </main>
