--- a/views/partials/create-room-form.html
+++ b/views/partials/create-room-form.html
@@ -16,7 +16,12 @@
   </div>
 
   <div class="mb-4">
-    <label for="users" class="block mb-2">Users</label>
+    <label
+      for="users"
+      class="block mb-2"
+      aria-label="dont have the budget for combobox autocomplete :("
+      >Users</label
+    >
     <p class="text-xs text-gray-500">Comma separated list of usernames</p>
     <input
       type="text"
