--- a/views/input.css
+++ b/views/input.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer components {
+    .selected-room {
+        @apply bg-blue-100 text-blue-600 font-medium important 
+    }
+}
