--- a/views/pages/create-room.html
+++ b/views/pages/create-room.html
@@ -1,6 +1,4 @@
-<div class="w-full bg-white rounded shadow p-4 h-full overflow-y-scroll">
-  <div class="mx-auto max-w-xl">
-    <h2 class="text-2xl font-bold mb-4">Create a new room</h2>
-    {{ template "partials/create-room-form" . }}
-  </div>
+<div class="max-w-md mx-auto bg-white rounded shadow p-6">
+  <h2 class="text-2xl font-bold mb-4">Create a new room</h2>
+  {{ template "partials/create-room-form" . }}
 </div>
