--- a/views/partials/messages.html
+++ b/views/partials/messages.html
@@ -1,31 +1,7 @@
 <div
+  class="flex-1 overflow-y-auto p-4 scroll-auto"
   id="room-{{.RoomID}}-messages"
-  class="overflow-y-auto mb-4 flex-grow scroll-auto"
   hx-on:scroll="if (this.scrollHeight - this.scrollTop === this.clientHeight) { resetUnread({{.RoomID}}); }"
-  hx-on:focus="cosole.log('focus changed');"
 >
   {{template "partials/message-range-pagination" . }}
 </div>
-
-<form
-  ws-send
-  hx-vals='{"room_id":{{.RoomID}}}'
-  class="flex flex-row gap-2"
-  hx-on::ws-after-send="this.reset();"
->
-  <input
-    type="text"
-    id="message-input"
-    name="Content"
-    class="w-full p-2 border rounded"
-    placeholder="Type your message..."
-    required
-    minlength="1"
-  />
-  <button
-    type="submit"
-    class="bg-blue-500 hover:bg-blue-600 text-white font-semibold p-2 px-4 rounded shadow"
-  >
-    Send
-  </button>
-</form>
